# music-app

./: .env.template  .gitignore  dbs_commands.sh  pyproject.toml
api/: alembic.ini
api/migrations/: env.py
api/migrations/versions/: 3f1f0b2516cf_add_users_table.py  7631ced89b27_add_refresh_tokens_table.py
api/src/: celery_app.py  config.py  database.py  main.py  models.py
api/src/auth/: dependencies.py  exceptions.py  repository.py  router.py  schemas.py  service.py  utils.py
api/src/auth/routers/: __init__.py  admin.py  auth.py  users.py
api/src/database/: config.py  db_config.py  models.py  repository.py
api/src/dependencies/: auth_deps.py  db_dep.py  db_deps.py  session_dep.py
api/src/domain/: dependencies.py  exceptions.py
api/src/domain/auth/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  tasks.py  utils.py
api/src/domain/music/: dependencies.py  exceptions.py  schemas.py  services.py  tasks.py  utils.py
api/src/domain/users/: dependencies.py  exceptions.py  models.py  repository.py  schemas.py  service.py  services.py  utils.py
api/src/infrastructure/: app.py  exceptions.py  logger.py  s3_client.py  settings.py
api/src/infrastructure/dal/: datasource.py  uow.py
api/src/infrastructure/database/: config.py  enums.py  exceptions.py  models.py  repository.py
api/src/infrastructure/dependencies/: auth.py  db.py
api/src/music/: dependencies.py  exceptions.py  schemas.py  services.py  utils.py
api/src/music/routers/: __init__.py  youtube_download.py
api/src/users/: dependencies.py  models.py  repository.py  schemas.py  services.py  utils.py
api/src/utils/: logger.py  s3_client.py
api/tests/: conftest.py
api/tests/integrational/: test_auth.py  test_users.py
(+8 files in other folders)
