[project]
name = "music-app"
version = "0.1.0"
description = ""
authors = [
    {name = "tony",email = "technicalprogram4658@gmail.com"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
    "fastapi (==0.113.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

